plugins {
    id 'com.android.library'
    id 'maven-publish'
}

android {
    namespace 'com.partharoypc.adglide'
    compileSdk 35
    defaultConfig {
        minSdk 21
        targetSdk 35
        versionCode 1
        versionName "1.0.0"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
        encoding 'UTF-8'
    }
    buildFeatures {
        buildConfig = true
    }
    lint {
        disable 'GradleDependency'
    }

    publishing {
        singleVariant('release')
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.aar', '*.jar'], exclude: [])
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.13.0'


    //Primary Ad Networks
    implementation 'com.google.android.gms:play-services-ads:23.6.0'
    implementation 'com.facebook.android:audience-network-sdk:6.18.0'
    implementation 'com.google.ads.mediation:facebook:6.18.0.0'
    implementation 'com.facebook.infer.annotation:infer-annotation:0.18.0'

    // Secondary Ad Networks
    implementation 'com.unity3d.ads:unity-ads:4.12.5'
    api 'com.applovin:applovin-sdk:13.0.1'
    implementation 'com.ironsource.sdk:mediationsdk:8.4.0'
    implementation 'com.startapp:inapp-sdk:5.1.0'
    api 'com.wortise:android-sdk:1.7.0'

    //GDPR
    implementation 'com.google.android.ump:user-messaging-platform:3.1.0'

}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                groupId = "com.github.partharoypc"
                artifactId = "adglide"
                version = "1.0.0"

                pom {
                    name = "AdGlide"
                    description = "Simple ad library for Android with multiple ad networks"
                    url = "https://github.com/partharoypc/AdGlide"
                }
            }
        }
    }
}
